Mise place Icon - Vue

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <title>Puzzle - JS</title>
+    <link rel="shortcut icon" href="image/jigsaw-puzzle-1297102_1280.webp" type="image/x-icon">
+    <title>Puzzle</title>
 </head>
 <body>
-    
-    <div id="puzzle">
 
-    </div>
-    
+        <div class="titre">
+            <h1>JEU PUZZLE</h1>
+        </div>
+
+        <div id="puzzle">
+
+        </div>
     <script src="app.js"></script>
 </body>
 </html>
