Nanao anle mikitika an le niveau de makany amle jeu

--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="shortcut icon" href="image/jigsaw-puzzle-1297102_1280.webp" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/style.css" />
+    <link
+      rel="shortcut icon"
+      href="image/jigsaw-puzzle-1297102_1280.webp"
+      type="image/x-icon"
+    />
     <title>Puzzle</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div class="menu-container">
+      <div class="titre">
+        <h1>PUZZLE NUMBERS</h1>
+      </div>
 
-        <div class="titre">
-            <h1>JEU PUZZLE</h1>
-        </div>
+      <h3 class="grid">Select Grids</h3>
+      <div class="btn-container">
+        <button class="btn" type="button" value="3">3x3</button>
+        <button class="btn" type="button" value="4">4x4</button>
+        <button class="btn" type="button" value="6">6x6</button>
+      </div>
+    </div>
 
-        <div id="puzzle">
+    <div class="puzzle"></div>
 
-        </div>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
