nanao animation rehefa victoire

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
             <h1>JEU PUZZLE</h1>
         </div>
 
-        <div id="puzzle">
-
-        </div>
+        <div id="puzzle"></div>
+        <canvas id="congratsCanvas"></canvas>
     <script src="app.js"></script>
 </body>
 </html>
